simplifies layer logic. Adds context for response handler
